--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,6 +17,39 @@
         android:text="test1"
         android:gravity="center"/>
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button_test2"
+        android:layout_width="160dp"
+        android:layout_height="72dp"
+        app:layout_constraintTop_toBottomOf="@+id/button_test1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        style="@android:style/Widget.CompoundButton"
+        android:text="test2"
+        android:gravity="center"/>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button_test3"
+        android:layout_width="160dp"
+        android:layout_height="72dp"
+        app:layout_constraintTop_toBottomOf="@+id/button_test2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        style="@android:style/Widget.CompoundButton"
+        android:text="test3"
+        android:gravity="center"/>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button_test4"
+        android:layout_width="160dp"
+        android:layout_height="72dp"
+        app:layout_constraintTop_toBottomOf="@+id/button_test3"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        style="@android:style/Widget.CompoundButton"
+        android:text="singleton"
+        android:gravity="center"/>
+
     <TextView
         android:id="@+id/text_home"
         android:layout_width="match_parent"
