--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,7 +9,11 @@
         android:id="@+id/nav_home"
         android:name="react.freddy.com.ubid.ui.home.HomeFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_nav_home_to_dagger_test_fragment"
+            app:destination="@id/dagger_test_fragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/nav_gallery"
@@ -22,4 +26,9 @@
         android:name="react.freddy.com.ubid.ui.slideshow.SlideshowFragment"
         android:label="@string/menu_slideshow"
         tools:layout="@layout/fragment_slideshow" />
+
+    <fragment android:id="@+id/dagger_test_fragment"
+        android:name="react.freddy.com.ubid.ui.test.DaggerTestFragment"
+        android:label="Dagger Test"
+        tools:layout="@layout/fragment_dagger_test"/>
 </navigation>
