--- a/app/src/main/res/layout/loading_fragment.xml
+++ b/app/src/main/res/layout/loading_fragment.xml
@@ -3,11 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.loading.LoadingFragment">
 
-    <TextView
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/lottie_animation_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Hello" />
+        android:scaleType="centerCrop"
+        app:lottie_rawRes="@raw/lottielogo"
+        app:lottie_loop="false"
+        app:lottie_autoPlay="true" />
 
 </FrameLayout>
