--- a/app/src/main/res/layout/fragment_view_pager_home.xml
+++ b/app/src/main/res/layout/fragment_view_pager_home.xml
@@ -74,7 +74,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:tabIconTint="@drawable/tab_icon_color_selector"
-                app:tabTextColor="?attr/tabSelectedTextColor"/>
+                app:tabTextColor="@color/colorWhite"
+                app:tabGravity="fill"
+                app:tabMode="scrollable"/>
 
         </com.google.android.material.appbar.AppBarLayout>
 
