--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="colorAccentLoading">#00D1C1</color>
+
+    <color name="colorWhite">#FFFFFF</color>
 </resources>
