--- a/app/src/main/res/layout/bid_list_item.xml
+++ b/app/src/main/res/layout/bid_list_item.xml
@@ -1,48 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <data>
+        <variable
+            name="epicVo"
+            type="react.freddy.com.ubid.vo.EpicVo" />
+    </data>
+
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingStart="@dimen/activity_horizontal_margin"
-        android:paddingEnd="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin">
+        android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/tv_pro_name"
-            android:layout_width="wrap_content"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:text="好车e贷商户端"
-            android:textAppearance="?attr/textAppearanceListItem"/>
+            android:paddingStart="@dimen/activity_horizontal_margin"
+            android:paddingEnd="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:paddingBottom="@dimen/activity_vertical_margin">
 
-        <TextView
-            android:id="@+id/tv_bid_status"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            tools:text="未竞标"
-            android:textAppearance="?attr/textAppearanceListItem"
-            />
+            <TextView
+                android:id="@+id/tv_pro_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                tools:text="好车e贷商户端"
+                android:text="@{epicVo.projectName}"
+                android:textAppearance="?attr/textAppearanceListItem" />
 
-        <TextView
-            android:id="@+id/tv_content"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/nav_header_vertical_spacing"
-            app:layout_constraintTop_toBottomOf="@+id/tv_pro_name"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:text="SAICFC-ITREQ202006300113-EFS getAllApplyInfoByCertNo接口ACCOUNTGOOD参数取值逻辑变更20200630"
-            android:textAppearance="?attr/textAppearanceListItem"/>
+            <TextView
+                android:id="@+id/tv_bid_status"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                tools:text="未竞标"
+                android:text="@{epicVo.status}"
+                android:textAppearance="?attr/textAppearanceListItem" />
+
+            <TextView
+                android:id="@+id/tv_content"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/nav_header_vertical_spacing"
+                app:layout_constraintTop_toBottomOf="@+id/tv_pro_name"
+                app:layout_constraintStart_toStartOf="parent"
+                tools:text="SAICFC-ITREQ202006300113-EFS getAllApplyInfoByCertNo接口ACCOUNTGOOD参数取值逻辑变更20200630"
+                android:textAppearance="?attr/textAppearanceListItem"
+                android:text="@{epicVo.epicName}"/>
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-</com.google.android.material.card.MaterialCardView>
+    </com.google.android.material.card.MaterialCardView>
+</layout>
