--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -64,7 +64,16 @@
         android:id="@+id/unbidFragment"
         android:name="react.freddy.com.ubid.ui.unbid.UnbidFragment"
         android:label="UnbidFragment"
-        tools:layout="@layout/unbid_fragment"/>
+        tools:layout="@layout/unbid_fragment">
+
+        <action
+            android:id="@+id/action_unbidFragment_to_login_fragment"
+            app:destination="@id/login_fragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"/>
+    </fragment>
 
 
 </navigation>
