--- a/app/src/main/res/layout/unbid_fragment.xml
+++ b/app/src/main/res/layout/unbid_fragment.xml
@@ -4,10 +4,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-
+        <variable
+            name="loadingMore"
+            type="boolean" />
     </data>
 
-    <FrameLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.unbid.UnbidFragment">
@@ -15,7 +17,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/bid_list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:clipToPadding="false"
             android:paddingEnd="@dimen/activity_horizontal_margin"
             android:paddingStart="@dimen/activity_horizontal_margin"
@@ -23,7 +25,19 @@
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:spanCount="1"
             tools:context="com.google.samples.apps.sunflower.GardenActivity"
-            tools:listitem="@layout/bid_list_item" />
+            tools:listitem="@layout/bid_list_item"
+            app:layout_constraintBottom_toTopOf="@+id/load_more_bar"/>
 
-    </FrameLayout>
+        <ProgressBar
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:indeterminate="true"
+            android:id="@+id/load_more_bar"
+            app:visibleGone="@{loadingMore}"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
